--- a/index.html
+++ b/index.html
@@ -46,8 +46,52 @@
         </div>
     </div>
 
-    <div class="services-container">
 
+    <div class="services-container">
+        <h1 class="service-heading">My Quality Services</h1>
+        <div class="srvc-card">
+            <div>
+                <h1>01</h1>
+                <h2>Web Developing</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ratione sunt numquam id dolore exercitationem iste aut nulla incidunt, architecto sapiente? Iusto similique nihil tempore minus delectus ab tenetur consequuntur?</p>
+                <img src="" alt="">
+            </div>
+
+            <div>
+                <h1>02</h1>
+                <h2>Web Developing</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ratione sunt numquam id dolore exercitationem iste aut nulla incidunt, architecto sapiente? Iusto similique nihil tempore minus delectus ab tenetur consequuntur?</p>
+                <img src="" alt="">
+            </div>
+
+            <div>
+                <h1>03</h1>
+                <h2>Web Developing</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ratione sunt numquam id dolore exercitationem iste aut nulla incidunt, architecto sapiente? Iusto similique nihil tempore minus delectus ab tenetur consequuntur?</p>
+                <img src="" alt="">
+            </div>
+
+            <div>
+                <h1>04</h1>
+                <h2>Web Developing</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ratione sunt numquam id dolore exercitationem iste aut nulla incidunt, architecto sapiente? Iusto similique nihil tempore minus delectus ab tenetur consequuntur?</p>
+                <img src="" alt="">
+            </div>
+
+            <div>
+                <h1>05</h1>
+                <h2>Web Developing</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ratione sunt numquam id dolore exercitationem iste aut nulla incidunt, architecto sapiente? Iusto similique nihil tempore minus delectus ab tenetur consequuntur?</p>
+                <img src="" alt="">
+            </div>
+
+            <div>
+                <h1>06</h1>
+                <h2>Web Developing</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ratione sunt numquam id dolore exercitationem iste aut nulla incidunt, architecto sapiente? Iusto similique nihil tempore minus delectus ab tenetur consequuntur?</p>
+                <img src="" alt="">
+            </div>
+        </div>
     </div>
 
     <div class="recent-work-container">
