--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="nav-container">
-        <p class="logo">Taskin</p>
+        <p class="logo">TUBA</p>
         <div class="nav-content">
             <p>Home</p>
             <p>Services</p>
