--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>TUBA</title>
 
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/hover.css">
 </head>
 <body>
     <nav class="nav-container">
@@ -50,52 +51,78 @@
     <div class="services-container">
         <h1 class="service-heading">My Quality Services</h1>
         <div class="srvc-card">
-            <div>
+            <div class="srvc-card-mini">
                 <h1>01</h1>
-                <h2>Web Developing</h2>
+                <h2 class="srvc-name">Web Developing</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ratione sunt numquam id dolore exercitationem iste aut nulla incidunt, architecto sapiente? Iusto similique nihil tempore minus delectus ab tenetur consequuntur?</p>
-                <img src="" alt="">
+                <img class="srvc-icon default-icon" src="assets/input-icon.svg" alt="">
+                <!-- Image shown on hover -->
+                <img class="srvc-icon hover-icon" src="assets/export-share-icon.svg" alt="">
             </div>
 
-            <div>
+            <div class="srvc-card-mini">
                 <h1>02</h1>
-                <h2>Web Developing</h2>
+                <h2 class="srvc-name">Web Developing</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ratione sunt numquam id dolore exercitationem iste aut nulla incidunt, architecto sapiente? Iusto similique nihil tempore minus delectus ab tenetur consequuntur?</p>
-                <img src="" alt="">
+                <!-- Default image -->
+                <img class="srvc-icon default-icon" src="assets/input-icon.svg" alt="">
+                <!-- Image shown on hover -->
+                <img class="srvc-icon hover-icon" src="assets/export-share-icon.svg" alt="">
             </div>
 
-            <div>
+            <div class="srvc-card-mini">
                 <h1>03</h1>
-                <h2>Web Developing</h2>
+                <h2 class="srvc-name">Web Developing</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ratione sunt numquam id dolore exercitationem iste aut nulla incidunt, architecto sapiente? Iusto similique nihil tempore minus delectus ab tenetur consequuntur?</p>
-                <img src="" alt="">
+                <img class="srvc-icon default-icon" src="assets/input-icon.svg" alt="">
+                <!-- Image shown on hover -->
+                <img class="srvc-icon hover-icon" src="assets/export-share-icon.svg" alt="">
             </div>
 
-            <div>
+            <div class="srvc-card-mini">
                 <h1>04</h1>
-                <h2>Web Developing</h2>
+                <h2 class="srvc-name">Web Developing</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ratione sunt numquam id dolore exercitationem iste aut nulla incidunt, architecto sapiente? Iusto similique nihil tempore minus delectus ab tenetur consequuntur?</p>
-                <img src="" alt="">
+                <img class="srvc-icon default-icon" src="assets/input-icon.svg" alt="">
+                <!-- Image shown on hover -->
+                <img class="srvc-icon hover-icon" src="assets/export-share-icon.svg" alt="">
             </div>
 
-            <div>
+            <div class="srvc-card-mini">
                 <h1>05</h1>
-                <h2>Web Developing</h2>
+                <h2 class="srvc-name">Web Developing</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ratione sunt numquam id dolore exercitationem iste aut nulla incidunt, architecto sapiente? Iusto similique nihil tempore minus delectus ab tenetur consequuntur?</p>
-                <img src="" alt="">
+                <img class="srvc-icon default-icon" src="assets/input-icon.svg" alt="">
+                <!-- Image shown on hover -->
+                <img class="srvc-icon hover-icon" src="assets/export-share-icon.svg" alt="">
             </div>
 
-            <div>
+            <div class="srvc-card-mini">
                 <h1>06</h1>
-                <h2>Web Developing</h2>
+                <h2 class="srvc-name">Web Developing</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ratione sunt numquam id dolore exercitationem iste aut nulla incidunt, architecto sapiente? Iusto similique nihil tempore minus delectus ab tenetur consequuntur?</p>
-                <img src="" alt="">
+                <img class="srvc-icon default-icon" src="assets/input-icon.svg" alt="">
+                <!-- Image shown on hover -->
+                <img class="srvc-icon hover-icon" src="assets/export-share-icon.svg" alt="">
             </div>
         </div>
     </div>
 
     <div class="recent-work-container">
+        <div class="RW-heading">
+            <h1 class="RW-heading-text">My Recent Work</h1>
+            <div>
+                <img src="" alt="logo">
+                <img src="" alt="logo">
+                <img src="" alt="logo">
+            </div>
+        </div>
 
+        <div>
+            <img src="" alt="RW">
+            <img src="" alt="RW">
+            <img src="" alt="RW">
+        </div>
     </div>
 
     <div class="education-container">
